Updating to provide a source of truth to compare to

--- a/notebooks/knowledge-graph.ipynb
+++ b/notebooks/knowledge-graph.ipynb
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
     "\n",
     "allowed_nodes = [\n",
     "    {\n",
-    "        \"node\": \"Person\",\n",
+    "        \"label\": \"Person\",\n",
     "        \"description\": \"A human or other entity that performs actions\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Location\", \"type\": \"isLocatedAt\"},\n",
@@ -665,7 +665,7 @@
     "        ]\n",
     "    },\n",
     "    {\n",
-    "        \"node\": \"Position\",\n",
+    "        \"label\": \"Position\",\n",
     "        \"description\": \"A job or role\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Person\", \"type\": \"isFilledBy\"},\n",
@@ -673,7 +673,7 @@
     "        ]\n",
     "    },\n",
     "    {\n",
-    "        \"node\": \"Location\",\n",
+    "        \"label\": \"Location\",\n",
     "        \"descrition\": \"A geographical locale\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Person\", \"type\": \"locates\"},\n",
@@ -681,7 +681,7 @@
     "        ]\n",
     "    },\n",
     "    {\n",
-    "        \"node\": \"Institution\",\n",
+    "        \"label\": \"Institution\",\n",
     "        \"description\": \"An organization or company\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Location\", \"type\": \"isLocatedAt\"},\n",
@@ -690,11 +690,12 @@
     "            {\"relatesWith\": \"Person\", \"type\": \"hires\"},\n",
     "            {\"relatesWith\": \"Event\", \"type\": \"holds\"},\n",
     "            {\"relatesWith\": \"Document\", \"type\": \"houses\"},\n",
-    "            {\"relatesWith\": \"Initiative\", \"type\": \"sponsors\"}\n",
+    "            {\"relatesWith\": \"Initiative\", \"type\": \"sponsors\"},\n",
+    "            {\"relatesWith\": \"Position\", \"type\": \"hiresFor\"}\n",
     "        ]\n",
     "    },\n",
     "    {\n",
-    "        \"node\": \"Event\",\n",
+    "        \"label\": \"Event\",\n",
     "        \"description\": \"An occurence with a specific date and time\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Person\", \"type\": \"hasParticipant\"},\n",
@@ -712,7 +713,7 @@
     "    #     ]\n",
     "    # },\n",
     "    {\n",
-    "        \"node\": \"Initiative\",\n",
+    "        \"label\": \"Initiative\",\n",
     "        \"description\": \"A project or program\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Person\", \"type\": \"hasParticipant\"},\n",
@@ -723,7 +724,7 @@
     "        ]\n",
     "    },\n",
     "    {\n",
-    "        \"node\": \"Document\",\n",
+    "        \"label\": \"Document\",\n",
     "        \"description\": \"A piece of writing or other content\",\n",
     "        \"allowedRelationships\": [\n",
     "            {\"relatesWith\": \"Person\", \"type\": \"isWrittenBy\"},\n",
@@ -743,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +801,7 @@
       "- **Consistency**: Ensure you use basic or elementary types for node labels.\n",
       "  - For example, when you identify an entity representing a person, always label it as **\"person\"**. Avoid using more specific terms like \"mathematician\" or \"scientist\".\n",
       "- **Node IDs**: Never utilize integers as node IDs. Node IDs should be names or human-readable identifiers found in the text.\n",
-      "- **Allowed Node Labels And the Allowed Relationships Between Them:**[{'node': 'Person', 'description': 'A human or other entity that performs actions', 'allowedRelationships': [{'relatesWith': 'Location', 'type': 'isLocatedAt'}, {'relatesWith': 'Event', 'type': 'participatesIn'}, {'relatesWith': 'Communication', 'type': 'makesRequests'}, {'relatesWith': 'Communication', 'type': 'respondsToRequests'}, {'relatesWith': 'Document', 'type': 'writes'}, {'relatesWith': 'Document', 'type': 'edits'}, {'relatesWith': 'Document', 'type': 'commentsOn'}, {'relatesWith': 'Initiative', 'type': 'participatesIn'}, {'relatesWith': 'Institution', 'type': 'belongsTo'}, {'relatesWith': 'Position', 'type': 'holds'}, {'relatesWith': 'Position', 'type': 'appliedFor'}]}, {'node': 'Position', 'description': 'A job or role', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'isFilledBy'}, {'relatesWith': 'Institution', 'type': 'isOfferedBy'}]}, {'node': 'Location', 'descrition': 'A geographical locale', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'locates'}, {'relatesWith': 'Institution', 'type': 'locates'}]}, {'node': 'Institution', 'description': 'An organization or company', 'allowedRelationships': [{'relatesWith': 'Location', 'type': 'isLocatedAt'}, {'relatesWith': 'Person', 'type': 'employs'}, {'relatesWith': 'Person', 'type': 'affiliatesWith'}, {'relatesWith': 'Person', 'type': 'hires'}, {'relatesWith': 'Event', 'type': 'holds'}, {'relatesWith': 'Document', 'type': 'houses'}, {'relatesWith': 'Initiative', 'type': 'sponsors'}]}, {'node': 'Event', 'description': 'An occurence with a specific date and time', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'hasParticipant'}, {'relatesWith': 'Document', 'type': 'isAssociatedWith'}, {'relatesWith': 'Event', 'type': 'recursWith'}, {'relatesWith': 'Initiative', 'type': 'supports'}]}, {'node': 'Initiative', 'description': 'A project or program', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'hasParticipant'}, {'relatesWith': 'Person', 'type': 'isLedBy'}, {'relatesWith': 'Event', 'type': 'isDiscussedAt'}, {'relatesWith': 'Institution', 'type': 'isSponsoredBy'}, {'relatesWith': 'Document', 'type': 'isSupportedBy'}]}, {'node': 'Document', 'description': 'A piece of writing or other content', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'isWrittenBy'}, {'relatesWith': 'Event', 'type': 'isAssociatedWith'}, {'relatesWith': 'Initiative', 'type': 'supports'}]}]\n",
+      "- **Allowed Node Labels And the Allowed Relationships Between Them:**[{'label': 'Person', 'description': 'A human or other entity that performs actions', 'allowedRelationships': [{'relatesWith': 'Location', 'type': 'isLocatedAt'}, {'relatesWith': 'Event', 'type': 'participatesIn'}, {'relatesWith': 'Communication', 'type': 'makesRequests'}, {'relatesWith': 'Communication', 'type': 'respondsToRequests'}, {'relatesWith': 'Document', 'type': 'writes'}, {'relatesWith': 'Document', 'type': 'edits'}, {'relatesWith': 'Document', 'type': 'commentsOn'}, {'relatesWith': 'Initiative', 'type': 'participatesIn'}, {'relatesWith': 'Institution', 'type': 'belongsTo'}, {'relatesWith': 'Position', 'type': 'holds'}, {'relatesWith': 'Position', 'type': 'appliedFor'}]}, {'label': 'Position', 'description': 'A job or role', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'isFilledBy'}, {'relatesWith': 'Institution', 'type': 'isOfferedBy'}]}, {'label': 'Location', 'descrition': 'A geographical locale', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'locates'}, {'relatesWith': 'Institution', 'type': 'locates'}]}, {'label': 'Institution', 'description': 'An organization or company', 'allowedRelationships': [{'relatesWith': 'Location', 'type': 'isLocatedAt'}, {'relatesWith': 'Person', 'type': 'employs'}, {'relatesWith': 'Person', 'type': 'affiliatesWith'}, {'relatesWith': 'Person', 'type': 'hires'}, {'relatesWith': 'Event', 'type': 'holds'}, {'relatesWith': 'Document', 'type': 'houses'}, {'relatesWith': 'Initiative', 'type': 'sponsors'}]}, {'label': 'Event', 'description': 'An occurence with a specific date and time', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'hasParticipant'}, {'relatesWith': 'Document', 'type': 'isAssociatedWith'}, {'relatesWith': 'Event', 'type': 'recursWith'}, {'relatesWith': 'Initiative', 'type': 'supports'}]}, {'label': 'Initiative', 'description': 'A project or program', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'hasParticipant'}, {'relatesWith': 'Person', 'type': 'isLedBy'}, {'relatesWith': 'Event', 'type': 'isDiscussedAt'}, {'relatesWith': 'Institution', 'type': 'isSponsoredBy'}, {'relatesWith': 'Document', 'type': 'isSupportedBy'}]}, {'label': 'Document', 'description': 'A piece of writing or other content', 'allowedRelationships': [{'relatesWith': 'Person', 'type': 'isWrittenBy'}, {'relatesWith': 'Event', 'type': 'isAssociatedWith'}, {'relatesWith': 'Initiative', 'type': 'supports'}]}]\n",
       "## 3. Handling Numerical Data and Dates\n",
       "- Numerical data, like age or other related information, should be incorporated as attributes or properties of the respective nodes.\n",
       "- **No Separate Nodes for Dates/Numbers**: Do not create separate nodes for dates or numerical values. Always attach them as attributes or properties of nodes.\n",
@@ -843,8 +844,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The expected outcome from the email sample is something like "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```cypher\n",
+    "CREATE (e1:Position {name:\"Engineering Manager, LLM Scaling\", context:\"Thank you for your interest in the Engineering Manager, LLM Scaling position\"})\n",
+    "CREATE (i1:Institution {name: \"Anthropic\", context: \"position at Anthropic\"})-[:hiresFor]->(e1)\n",
+    "CREATE (p1:Person {name:\"Keith\", context:\"Hi Keith,\"})-[:isInterestedIn]->(e1)\n",
+    "CREATE (e1)-[:isOfferedBy]->(i1)\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
