Updating notebook, was incorreect

--- a/notebooks/knowledge-graph.ipynb
+++ b/notebooks/knowledge-graph.ipynb
@@ -660,7 +660,7 @@
     "            {\"relatesWith\": \"Initiative\", \"type\": \"participatesIn\"},\n",
     "            {\"relatesWith\": \"Institution\", \"type\": \"belongsTo\"},\n",
     "            {\"relatesWith\": \"Position\", \"type\": \"holds\"},\n",
-    "            {\"relatesWith\": \"Position\", \"type\": \"appliedFor\"}\n",
+    "            {\"relatesWith\": \"Position\", \"type\": \"hasAppliedFor\"}\n",
     "\n",
     "        ]\n",
     "    },\n",
